up(정산기능수정, 안 쓰는 파일 삭제)