@@ -4,6 +4,7 @@ import com.almagest_dev.tacobank_core_server.domain.group.model.Group;
 import com.almagest_dev.tacobank_core_server.domain.group.model.GroupMember;
 import com.almagest_dev.tacobank_core_server.domain.group.repository.GroupMemberRepository;
 import com.almagest_dev.tacobank_core_server.domain.group.repository.GroupRepository;
+import com.almagest_dev.tacobank_core_server.domain.settlememt.model.Settlement;
 import com.almagest_dev.tacobank_core_server.presentation.dto.SettlementRequestDto;
 import com.almagest_dev.tacobank_core_server.presentation.dto.SettlementResponseDto;
 import org.springframework.stereotype.Service;
@@ -31,15 +32,14 @@ public class SettlementService {
         List<GroupMember> acceptedMembers = groupMemberRepository.findByPayGroupAndStatus(group, "ACCEPTED");
 
         // 그룹장도 정산에 포함
-        List<SettlementResponseDto> settlementList = new ArrayList<>();
-        int totalMembers = acceptedMembers.size()+1; // 그룹장 포함한 멤버 수
+        int totalMembers = acceptedMembers.size() + 1; // 그룹장 포함한 멤버 수
 
         int perMemberAmount = request.getTotalAmount() / totalMembers;
 
         // 각 ACCEPTED 멤버의 분담 금액 정보 생성
-        settlementList.addAll(acceptedMembers.stream()
+        List<SettlementResponseDto> settlementList = new ArrayList<>(acceptedMembers.stream()
                 .map(member -> new SettlementResponseDto(member.getMember().getId(), perMemberAmount))
-                .collect(Collectors.toList()));
+                .toList());
 
         // 그룹장 분담 금액 정보 추가
         settlementList.add(new SettlementResponseDto(group.getLeader().getId(), perMemberAmount));
